# Rust-boilerplate

./: Cargo.toml  Dockerfile  LICENSE  Makefile  configuration.yaml  spec.yaml
configuration/: base.yaml
migrations/: 20240214084208_appointments.sql  20240215155545_user.sql
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs  session.rs  startup.rs  telemetry.rs  utils.rs
src/auth/: credentials.rs  middleware.rs  mod.rs
src/models/: appointments.rs  group.rs  mod.rs  user.rs
src/routes/: appointments.rs  mod.rs  user.rs
tests/api/: appointments.rs  health_check.rs  login.rs  main.rs  user.rs  utils.rs
