[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rstest = "0.18.2"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
async-std = { version = "1.5", features = ["attributes"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock", "serde"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4"
enum-display = "0.1.4"
argon2 = { version = "0.4", features = ["std"] }
base64 = "0.22.0"
anyhow = "1.0.40"
thiserror = "1.0.58"
rand = { version = "0.8", features=["std_rng"] }
urlencoding = "2.1.3"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
actix-web-lab = "0.18"

[dev-dependencies]
once_cell = "1"
